<resources>
    <string name="app_name">Tip Time</string>
    <string name="txtDatos">Datos</string>
    <string name="hint_nombre">Introduce tu nombre</string>
    <string name="hint_email">Introduce tu Email</string>
    <string name="txt_domicilio">Introduce tu domicilio</string>
    <string name="txt_horario">Horario</string>
    <string name="radio_Button1">Completo</string>
    <string name="radio_Button2">Medio Tempo</string>
    <string name="boton">Guardar</string>
</resources>